<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>
<groupId>CompSci307_2021Fall</groupId>
<artifactId>oolala_team01</artifactId>
<version>master-SNAPSHOT</version>
<packaging>jar</packaging>

<properties>
    <project.build.sourceEncoding>iso-8859-1</project.build.sourceEncoding>
</properties>

<dependencies>
    <!-- framework for writing repeatable tests by using assertions about your code's values -->
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.8.1</version>
        <scope>test</scope>
    </dependency>
    <!-- provides testing for JavaFX by simulating user interactions and checking using JUnit assertions -->
    <dependency>
        <groupId>org.testfx</groupId>
        <artifactId>testfx-junit5</artifactId>
        <version>4.0.16-alpha</version>
        <scope>test</scope>
    </dependency>
</dependencies>

<build>
    <!-- use simple names for folders instead of maven's prerferred ones -->
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <resources>
        <!-- external data files -->
        <resource>
            <directory>data</directory>
        </resource>
        <!-- internal resource files also need to be included, but not directly -->
        <resource>
            <directory>src</directory>
        </resource>
    </resources>
    <plugins>
        <!-- compiles project source code using correct version and flags -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
                <encoding>iso-8859-1</encoding>
                <includes>
                    <include>src/**/*.java</include>
                </includes>
                <source>16</source>
                <target>16</target>
                <compilerArgs>
                    <arg>--enable-preview</arg>
                </compilerArgs>
            </configuration>
        </plugin>
        <!-- used to execute the unit tests of an application and generate a report -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M5</version>
            <configuration>
                <argLine>
                    @{argLine}
                    --enable-preview
                    --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                </argLine>
            </configuration>
        </plugin>
        <!-- check for violations of code style -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>3.1.2</version>
            <dependencies>
                <dependency>
                    <groupId>com.puppycrawl.tools</groupId>
                    <artifactId>checkstyle</artifactId>
                    <version>8.45.1</version>
                </dependency>
            </dependencies>
            <configuration>
                <configLocation>google_checks.xml</configLocation>
                <encoding>UTF-8</encoding>
                <consoleOutput>true</consoleOutput>
                <linkXRef>false</linkXRef>
            </configuration>
            <executions>
                <execution>
                    <id>validate</id>
                    <phase>validate</phase>
                    <goals>
                        <goal>check</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
    </plugins>
</build>
</project>
